--- a/client/downloads/download.html
+++ b/client/downloads/download.html
@@ -1,6 +1,6 @@
 <div flex>
   <div layout="column" layout-align="center center" style="margin-top: 2rem;">
-    <h3 class-md-title>Downloads</h3>
+    <h3 class="md-title">Downloads</h3>
     <span class="md-subhead">05/23/2016</span>
     <table class="md-padding">
      <tbody >
