refactored query to find or crreate.

--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -9,7 +9,7 @@
         </div>
         <div style="margin: .5rem;">
 
-          <span class="md-caption">version:{{ conf.version }}</span>
+          <span class="md-caption">{{ conf.version }}</span>
         </div>
 
     </div>
