--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
 </head>
 <body layout="column" ng-app="logInApp"
       ng-cloak
-      ng-controller="DashboardController"
+      ng-controller="MainController"
       class="ng-cloak {xs: $mdMedia('xs'), sm: $mdMedia('sm'), md: $mdMedia('md'), lg: $mdMedia('lg')}">
 
   <md-toolbar layout layout-align="space-between center" layout-xs layout-align-xs="center center" style="background-color: #00274e; color: rgb(60, 161, 255);">
@@ -123,6 +123,7 @@
 <!-- Your application bootstrap  -->
 <script src="js/app.js"></script>
 <script src="js/lb-services.js"></script>
+  <script src="js/mainController.js"></script>
 <script src="downloads/downloadController.js"></script>
 <script src="auth/authController.js"></script>
 <script src="auth/authService.js"></script>
