--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -1,6 +1,6 @@
 <div flex flex-xs="100" layout="column" layout-align="start center" class="md-title">
-<span class="md-title">Dashboard</span>
-  <p>Your Updates</p>
+<span class="md-subhead">Dashboard</span>
+  <p class="md-title">Recent Updates</p>
   <div><span class="md-subhead">Date</span> | <span class="md-subhead">Version</span></div>
     <div layout layout="start" ng-repeat="conf in confirms">
         <div style="margin: .5rem;">
