--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -30,6 +30,13 @@
       </div>
 
     </div>
+
+  </div>
+
+  <div layout layout-align="center center">
+    <ui-gmap-google-map center='map.center' zoom='map.zoom' id="map"></ui-gmap-google-map>
   </div>
 
 </div>
+
+
