--- a/client/index.html
+++ b/client/index.html
@@ -73,7 +73,9 @@
 
   </md-sidenav>
   <main flex layout="row" layout-align="center" ui-view ng-cloak class="md-padding" style="background-color:white; height:90vh;"></main>
+
 </div>
+
 
 <footer ng-show="currentUser" hide-sm hide-gt-xs layout layout-align="space-around center"  class="md-padding template_footer">
   <!-- to keep the menu item to the right it should appear last -->
@@ -104,11 +106,12 @@
 
 </footer>
 
-<!-- geolocation -->
 
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 
-
-<!-- Angular Material requires Angular.js Libraries -->
+<!--Angular Google Map Dependencies -->
+  <script src="vendor/lodash/lodash.js"></script>
+ <!-- Angular Material requires Angular.js Libraries -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-resource.min.js"></script>
@@ -123,7 +126,10 @@
 <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 <script src="https://rawgit.com/srfrnk/re-tree/master/re-tree.js" type="text/javascript"></script>
 <script src="https://rawgit.com/srfrnk/ng-device-detector/master/ng-device-detector.js" type="text/javascript"></script>
-<!-- Your application bootstrap  -->
+  <script src="vendor/angular-simple-logger/dist/angular-simple-logger.min.js"></script>
+  <script src="vendor/angular-google-maps/dist/angular-google-maps.min.js"></script>
+
+  <!-- Your application bootstrap  -->
 <script src="js/app.js"></script>
 <script src="js/lb-services.js"></script>
   <script src="js/mainController.js"></script>
