--- a/client/index.html
+++ b/client/index.html
@@ -6,13 +6,13 @@
 <!--[if IE 8]>
 <html class="no-js lt-ie9"><![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js"><!--<![endif]-->
+<html class="no-js" ng-app="FSV42App"><!--<![endif]-->
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <!-- Angular Material style sheet -->
-  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
+  <link rel="stylesheet" href="vendor/angular-material/angular-material.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
   <!-- Custom Font -->
@@ -20,21 +20,23 @@
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,700italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/main.css">
 </head>
-<body layout="column" ng-app="logInApp"
+<body layout="column"
       ng-cloak
       ng-controller="MainController"
       class="ng-cloak {xs: $mdMedia('xs'), sm: $mdMedia('sm'), md: $mdMedia('md'), lg: $mdMedia('lg')}">
 
-  <md-header layout layout-align="center center" style=" background-color: #00274e; color: rgb(60, 161, 255);">
-    <div flex="50" flex-xs="100" layout layout-align="start" layout-align-xs="center center">
-      <div layout style="height:6vh; margin:.8rem;">
+<div flex layout="column" id="container">
+  <md-header layout layout-align="center center" class="md-padding" style=" background-color: #00274e; color: rgb(60, 161, 255);height:68px!important;">
+    <div flex flex-xs="100" layout layout-align="start" layout-align-sm="center space-between" layout-align-xs="center center" style="border:solid thin grey">
+      <div layout style=" margin-left:1rem;">
 
-       <img  src="hc-logo.png" alt="logo" style="height:7vh;" ng-cloak />
+        <img  src="hc-logo.png" alt="logo" style="height:44px;" ng-cloak />
       </div>
     </div>
-    <div flex="50" layout layout-align="center center" hide-xs>
-      <div layout layout-align="center center"ng-controller="AuthLogoutController">
-        <md-button ng-show="currentUser" ui-sref="dashboard" class="md-padding">Dashboard</md-button>
+
+    <div  layout layout-align="end end" hide-xs style="height:64px;; border:solid thin red">
+      <div layout layout-align="center center" ng-controller="AuthLogoutController">
+        <md-button ng-show="currentUser" ui-sref="dashboard" class="md-subhead">Dashboard</md-button>
         <md-button ng-show="currentUser" ui-sref="download" class="md-padding">Downloads</md-button>
         <md-button ng-show="currentUser" ui-sref="confirm-update" class="md-padding">Confirm Update</md-button>
         <md-button ng-show="currentUser" ui-sref="report-issue" class="md-padding">Report Issue</md-button>
@@ -43,92 +45,101 @@
     </div>
 
 
+
   </md-header>
 
-<div >
+    <md-content flex>
 
-  <md-sidenav hide-sm hide-gt-xs ng-show="currentUser" layout="column" class="md-sidenav-left" md-component-id="left"
-              style="background-color: white;">
-    <md-toolbar layout layout-align="space-between start" class="md-padding" style="color: white!important; background-color:#00274e; height:10px!important;" >
-      <div layout="column">
-        <span class="md-caption">{{ currentUser.email }}</span>
-        <p class="md-caption" style="color:#999">System Administrator</p>
-      </div>
-      <button ng-click='close()' style="background-color: transparent; border: none; color: white!important">
-        <i class="material-icons">cancel</i>
-      </button>
-    </md-toolbar>
-    <div>
-      <md-button ng-controller="AuthLogoutController" ng-show="currentUser" ng-click="logout()" layout="row" class="md-subhead" style="background-color: transparent; border: none;">
-        <span>Logout</span>
-      </md-button>
-      <md-divider></md-divider>
-    </div>
-    <div>
-      <md-button ng-controller="AuthLogoutController" ng-show="currentUser" ng-click="logout()" layout="row" class="md-subhead" style="background-color: transparent; border: none;">
-        <span>Menu Item</span>
-      </md-button>
-      <md-divider></md-divider>
-    </div>
+      <md-sidenav hide-gt-sm ng-show="currentUser" layout="column" class="md-sidenav-left" md-component-id="left"
+                  style="background-color: white;">
+        <md-toolbar layout layout-align="space-between start" class="md-padding" style="color: white!important; background-color:#00274e; height:10px!important;" >
+          <div layout="column">
+            <span class="md-caption">{{ currentUser.email }}</span>
+            <p class="md-caption" style="color:#999">System Administrator</p>
+          </div>
+          <button ng-click='close()' style="background-color: transparent; border: none; color: white!important">
+            <i class="material-icons">cancel</i>
+          </button>
+        </md-toolbar>
+        <div>
+          <md-button ng-controller="AuthLogoutController" ng-show="currentUser" ng-click="logout()" layout="row" class="md-subhead" style="background-color: transparent; border: none;">
+            <span>Logout</span>
+          </md-button>
+          <md-divider></md-divider>
+        </div>
+        <div>
+          <md-button ng-controller="AuthLogoutController" ng-show="currentUser" ng-click="logout()" layout="row" class="md-subhead" style="background-color: transparent; border: none;">
+            <span>Menu Item</span>
+          </md-button>
+          <md-divider></md-divider>
+        </div>
 
-  </md-sidenav>
-  <main flex layout="row" layout-align="center" ui-view ng-cloak class="md-padding" style="background-color:white; height:90vh;"></main>
+      </md-sidenav>
+
+      <main flex layout="row" layout-align="start" ui-view  class="md-padding" style="background-color:white; border:solid thin green"></main>
+
+      <footer ng-show="currentUser"  hide-gt-xs layout layout-align="space-around center"  class="md-padding template_footer">
+        <!-- to keep the menu item to the right it should appear last -->
+        <button ng-show="currentUser" ui-sref="dashboard" hide-gt-xs class="md-caption" style="background-color: transparent; border: none;">
+          <div layout="column" layout-align="start">
+            <i class="material-icons">developer_board</i>
+            Dashboard
+          </div>
+        </button>
+        <button ng-show="currentUser" ui-sref="confirm-update" hide-gt-xs class="md-caption">
+          <div layout="column" layout-align="start">
+            <i class="material-icons">done_all</i>
+            Confirm
+          </div>
+        </button>
+        <button ng-show="currentUser" ui-sref="report-issue" hide-gt-xs class="md-caption" style="background-color: transparent; border: none;">
+          <div layout="column" layout-align="start">
+            <i class="material-icons">bug_report</i>
+            Issue
+          </div>
+        </button>
+        <button ng-show="currentUser" hide-gt-xs ng-click="openLeftMenu()" class="md-caption" style="background-color: transparent; border: none;">
+          <div layout="column" layout-align="start">
+            <i class="material-icons">more_horiz</i>
+            More
+          </div>
+        </button>
+
+      </footer>
+    </md-content>
 
 </div>
 
 
-<footer ng-show="currentUser" hide-sm hide-gt-xs layout layout-align="space-around center"  class="md-padding template_footer">
-  <!-- to keep the menu item to the right it should appear last -->
-  <button ng-show="currentUser" ui-sref="dashboard" hide-sm hide-gt-xs class="md-caption" style="background-color: transparent; border: none;">
-    <div layout="column" layout-align="start">
-      <i class="material-icons">developer_board</i>
-      Dashboard
-    </div>
-  </button>
-  <button ng-show="currentUser" ui-sref="confirm-update" hide-sm hide-gt-xs class="md-caption">
-    <div layout="column" layout-align="start">
-      <i class="material-icons">done_all</i>
-      Confirm
-    </div>
-  </button>
-  <button ng-show="currentUser" ui-sref="report-issue" hide-sm hide-gt-xs class="md-caption" style="background-color: transparent; border: none;">
-    <div layout="column" layout-align="start">
-      <i class="material-icons">bug_report</i>
-      Issue
-    </div>
-  </button>
-  <button ng-show="currentUser" hide-sm hide-gt-xs ng-click="openLeftMenu()" class="md-caption" style="background-color: transparent; border: none;">
-    <div layout="column" layout-align="start">
-      <i class="material-icons">more_horiz</i>
-      More
-    </div>
-  </button>
 
-</footer>
+
+
 
 
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-
+ <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUZmQ8vc34NHhjEnLzFf970bmt-0ZQaVU&callback=initMap"
+          async defer></script>-->
 <!--Angular Google Map Dependencies -->
   <script src="vendor/lodash/lodash.js"></script>
  <!-- Angular Material requires Angular.js Libraries -->
 
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-resource.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-animate.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-aria.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-messages.min.js"></script>
+<script src="vendor/angular/angular.min.js"></script>
+<script src="vendor/angular-resource/angular-resource.min.js"></script>
+<script src="vendor/angular-animate/angular-animate.min.js"></script>
+<script src="vendor/angular-aria/angular-aria.min.js"></script>
+<script src="vendor/angular-messages/angular-messages.min.js"></script>
 
 <!-- Angular-UI --->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js"></script>
+<script src="vendor/angular-ui-router/release/angular-ui-router.min.js"></script>
 
 <!-- Angular Material Library -->
-<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
+<script src="vendor/angular-material/angular-material.min.js"></script>
 <script src="https://rawgit.com/srfrnk/re-tree/master/re-tree.js" type="text/javascript"></script>
 <script src="https://rawgit.com/srfrnk/ng-device-detector/master/ng-device-detector.js" type="text/javascript"></script>
   <script src="vendor/angular-simple-logger/dist/angular-simple-logger.min.js"></script>
   <script src="vendor/angular-google-maps/dist/angular-google-maps.min.js"></script>
-
+<!-- Moment -->
+<!--<script src="vendor/moment/min/moment.min.js"></script>-->
   <!-- Your application bootstrap  -->
 <script src="js/app.js"></script>
 <script src="js/lb-services.js"></script>
