--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -3,7 +3,7 @@
   <div flex="25" layout="column" layout-align="start" layout-align-xs="center center">
     <md-list>
     <md-list-item>
-      <div style=""><span class="md-subhead">Status</span>
+      <div style=""><span class="md-title">Status</span>
         <p class="md-caption">{{ status }}</p>
         <span>
           <span class="md-caption">{{ mostRecentDownload.state+":  " }}</span><a class="md-caption" href="{{ mostRecentDownload.link }}">{{ mostRecentDownload.releaseDate | date:short }}</a>
@@ -116,57 +116,44 @@
   </div>
 </div>
   </div><!--end of ROW -->
-  <div flex="25" layout="column" style="border: solid thin red;">
-    <div layou style="background-color: whitesmoke">
-      <p class="md-caption" style="">Select an update version:</p>
-      <md-select class="md-caption" ng-model="update.ver" ng-change="initTxData(update.ver)"
-                 aria-label="update version">
-        <md-option ng-repeat="version in updateVersion" value="{{ version }}">
-          {{ version }}
-        </md-option>
-      </md-select>
-    </div>
-    <md-content>
-      <md-tabs flex md-dynamic-height md-border-bottom>
-        <md-tab label="Confirmed">
-          <md-content>
-            <div layout>
-              <div flex style="border:solid thin grey;" class="md-caption tableRow">
-                <table>
-                  <tr ng-repeat="people in confirmed">
-                    <td  class="md-caption"> {{ people.lname +", "+ people.fname }}</td>
-                    <td class="md-caption">{{ people.state }}</td>
-                    <table>
-                      <tr ng-repeat="people in confirmed">
-                        <td  class="md-caption"> {{ people.lname +", "+ people.fname }}</td>
-                        <td class="md-caption">{{ people.state }}</td>
-                        <table>
-                          <tr ng-repeat="people in confirmed">
-                            <td  class="md-caption"> {{ people.lname +", "+ people.fname }}</td>
-                            <td class="md-caption">{{ people.state }}</td>
+  <div ng-controller="IssueReportController" flex="25" layout="column" style="border: none;">
+    <div  layout="row" layout-align="center">
 
-                          </tr>
-                        </table>
-                      </tr>
-                    </table>
-                  </tr>
-                </table>
+      <div flex-xs="100" layout="column" layout-align="center">
+        <span class="md-subhead title md-padding">Issue Tracker</span>
+        <div  flex-xs="100" layout="column" layout-align="center center" class="md-padding"
+              style="margin: 5px 0; background-color: whitesmoke; border: solid thin lightblue; border-radius: 5px;">
+          <div ng-if="msgStatus == 0">
+            <form layout="column" name="reportIssueForm" ng-submit="report(update.releaseDate,update.issue,issue.comments)">
+              <md-input-container style="margin: 1rem 0;">
+                <!--<p class="md-caption" style="color:#950B02"><i>*</i> Please select a reason and version.</p>-->
+                <label>I am unable to...</label>
+                <md-select ng-model="update.issue" required>
+                  <md-option ng-repeat="issue in issueType" value="{{issue}}">{{issue}}</md-option>
+                </md-select>
+              </md-input-container>
+              <md-input-container>
+
+                <label>Release Date</label>
+                <md-select ng-model="update.releaseDate" required>
+                  <md-option ng-repeat="d in updates" value="{{d.releaseDate}}">{{d.releaseDate |date:long}}</md-option>
+                </md-select>
+              </md-input-container>
+              <div layout layout-align="center">
+                <textarea flex="100" ng-model="issue.comments" name="comments" id="comments" cols="30" rows="4" style="border-radius: 2%; border: solid thin lightgray;"></textarea>
               </div>
-            </div>
-          </md-content>
-        </md-tab>
-        <md-tab label="Unconfirmed">
-          <div layout>
-            <table>
-              <tr ng-repeat="p in unConfirmed">
-                <td class="md-caption">{{p.lname +", " + p.fname }}</td>
-                <td class="md-caption">{{ p.state }}</td>
-              </tr>
-            </table>
+              <div layout layout-align="center start" style="margin: 1rem;">
+                <md-button class="md-raised md-primary" type="submit" ng-disabled="reportIssueForm.$invalid" style="color:white; width: 150px; height:40px">Submit</md-button>
+              </div>
+            </form>
           </div>
-        </md-tab>
-      </md-tabs>
-    </md-content>
+          <div ng-if="msgStatus==1">
+            <p>{{ confirmation }}</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
   </div><!--end of ROW -->
 </div>
 <!--Chartist
